Project cards working

--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -1,4 +1,4 @@
-<md-card class="challenge-card">
+<md-grid-tile>
     <a ui-sref="project.home({ pid : project.accessUrl })">
         <img ng-src="{{project.poster || '/images/placeholder100x100.png'}}" alt="..." class="md-card-image">
     </a>
@@ -39,4 +39,4 @@
             </span>
         </div>
     </div>
-</md-card>
+</md-grid-tile>
