--- a/client/app/modules/profile/directives/userBlock/user-info.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-info.tpl.html
@@ -1,3 +1,3 @@
-<md-button ui-sref="profile({ uid : user._id })" style="width:100%;">
+<md-button ui-sref="profile({ uid : user._id })">
     {{ user.username }}
 </md-button>
