Fixed list ideas

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -85,14 +85,10 @@
         </md-toolbar>
 
         <section layout="row" layout-fill ng-controller="LeftNavCtrl">
-            <div ng-show="sideNavTemplateUrl" style="height:100%;" class="sidenav-container">
-                <md-sidenav class="md-sidenav-left md-whiteframe-z2" component-id="left" style="height:100%;">
-                    <div style="height:100%;">
-                        <ng-include src="sideNavTemplateUrl" flex layout="column" layout-fill style="padding-left: 15px;">
-                        </ng-include>
-                    </div>
-                </md-sidenav>
-            </div>
+            <md-sidenav ng-show="sideNavTemplateUrl" class="md-sidenav-left md-whiteframe-z2" component-id="left" md-is-locked-open="true">
+                <ng-include src="sideNavTemplateUrl" flex layout="column" layout-fill>
+                </ng-include>
+            </md-sidenav>
             <section ui-view="mainView" layout="column" layout-fill class="right-part"></section>
         </section>
     </div>
