Fixed FAB button themes and idea discussion

--- a/client/app/modules/common/leftNav/admin-challenges.tpl.html
+++ b/client/app/modules/common/leftNav/admin-challenges.tpl.html
@@ -9,7 +9,7 @@
     </md-toolbar>
     <md-content>
         <section layout="column" flex-md>
-            <md-button ui-sref="challenge({ cid : challenge.accessUrl })" class="md-theme-indigo">
+            <md-button ui-sref="challenge({ cid : challenge.accessUrl })" class="md-accent">
                 View Challenge
             </md-button>
             <md-button ng-click="popUpPoster($event)" class="md-raised">
