--- a/client/app/modules/common/leftNav/tags-projects.tpl.html
+++ b/client/app/modules/common/leftNav/tags-projects.tpl.html
@@ -1,7 +1,7 @@
 <md-toolbar>
     <div class="md-toolbar-tools">
         <div flex hide-md>
-            <md-button class="md-button-fab"   ng-click="toggle()">
+            <md-button class="md-fab"   ng-click="toggle()">
                 <i class="fa fa-angle-left fa-2x"  style="color:black;" ></i>
             </md-button>
         </div>
