Fixed idea cards

--- a/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
+++ b/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
@@ -1,4 +1,4 @@
-<md-card class="idea-card">
+<div class="idea-card">
     <a ui-sref="idea({ iid : idea._id })">
         <h4>{{ idea.title }}</h4>
     </a>
@@ -23,4 +23,4 @@
             </span>
         </div>
     </div>
-</md-card>
+</div>
