Fixed notification feed

--- a/client/app/modules/notification/notificationList/notification-list.tpl.html
+++ b/client/app/modules/notification/notificationList/notification-list.tpl.html
@@ -1,5 +1,5 @@
 <md-list>
-    <div ng-repeat="notif in notifications">
+    <md-list-item ng-repeat="notif in notifications">
         <notification notification="notif"></notification>
-    </div>
+    </md-list-item>
 </md-list>
