add old modification on angular material 10

--- a/client/app/modules/common/iframe/trelloEmbed.tpl.html
+++ b/client/app/modules/common/iframe/trelloEmbed.tpl.html
@@ -1,2 +1,2 @@
 <p><a ng-href="{{ linkUrl }}" target="_blank">See Trello in seperate window</a></p>
-<iframe width="100%" height="{{ height }}" src="{{ iframeUrl }}" scrolling="true"></iframe>
+<iframe width="100%" height="600" frameborder="0" src="{{ iframeUrl }}" scrolling="true"></iframe>
