--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,7 +43,7 @@
                 <div layout="row" layout-align="start end" >
                     <a ui-sref="ideas({ tag :'all' })" class="top-bar-icon">
                         <md-icon md-svg-src="images/svg/ideas.svg"></md-icon>
-                        <div class="tooltip-topbar-icon">ideas</div>
+                        <md-tooltip>ideas</md-tooltip>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -51,7 +51,7 @@
 
                     <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
                         <md-icon md-svg-src="images/svg/challenges.svg"></md-icon>
-                        <div class="tooltip-topbar-icon">challenges</div>
+                        <md-tooltip>challenges</md-tooltip>
                     </a>
                     <a ui-sref="challengeSuggest" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -59,7 +59,7 @@
 
                     <a ui-sref="projects.list({ tag :'all' })" class="top-bar-icon">
                         <i class="fa fa-rocket idea-icon"></i>
-                        <div class="tooltip-topbar-icon">projects</div>
+                        <md-tooltip>projects</md-tooltip>
                     </a>
                     <a ui-sref="projectCreation" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -77,6 +77,9 @@
                 </md-button>
                 <md-button ui-sref="feed" ng-if="currentUser" class="md-primary">
                     <i class="fa fa-flag"></i>
+                    <md-tooltip>
+                        notification
+                    </md-tooltip>
                 </md-button>
                 <md-button ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
                     <i class="fa fa-sign-out">Signout</i>
