--- a/client/app/modules/common/leftNav/tags-challenges.tpl.html
+++ b/client/app/modules/common/leftNav/tags-challenges.tpl.html
@@ -6,8 +6,8 @@
     </div>
 </md-toolbar>
 <md-content>
-    <md-button style="width:100%;text-align:right;" ui-route="/challenges/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : 'all' })">ALL</md-button>
+    <md-button style="width:100%;text-align:left;" ui-route="/challenges/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : 'all' })">ALL</md-button>
     <div ng-repeat="tag in tags">
-        <md-button style="width:100%;text-align:right;" ui-route="/challenges/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : tag.title })">{{tag.title}}</md-button>
+        <md-button style="width:100%;text-align:left;" ui-route="/challenges/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : tag.title })">{{tag.title}}</md-button>
     </div>
 </md-content>
