new visual in the feed and the profil

--- a/client/app/modules/common/leftNav/tags-challenges.tpl.html
+++ b/client/app/modules/common/leftNav/tags-challenges.tpl.html
@@ -5,9 +5,10 @@
         </div>
     </div>
 </md-toolbar>
-<md-content>
-    <md-button style="width:100%;text-align:left;" ui-route="/challenges/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : 'all' })">ALL</md-button>
-    <div ng-repeat="tag in tags">
-        <md-button style="width:100%;text-align:left;" ui-route="/challenges/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : tag.title })">{{tag.title}}</md-button>
-    </div>
-</md-content>
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+	<md-content>
+	    <md-button style="width:100%;text-align:left;" ui-route="/challenges/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : 'all' })">ALL</md-button>
+	    <div ng-repeat="tag in tags">
+	        <md-button style="width:100%;text-align:left;" ui-route="/challenges/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : tag.title })">{{tag.title}}</md-button>
+	    </div>
+	</md-content>
