--- a/client/app/modules/common/leftNav/tags-projects.tpl.html
+++ b/client/app/modules/common/leftNav/tags-projects.tpl.html
@@ -7,9 +7,9 @@
 </md-toolbar>
 <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 	<md-content>
-	    <md-button style="width:100%;text-align:left;" ui-route="/projects/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
+	    <md-button style="width:100%;text-align:left;" ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
 	    <div ng-repeat="tag in tags">
-	        <md-button style="width:100%;text-align:left;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
+	        <md-button style="width:100%;text-align:left;" ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
 	    </div>
 	</md-content>
 </md-sidenav>
