--- a/client/app/index.html
+++ b/client/app/index.html
@@ -35,31 +35,28 @@
 <![endif]-->
 
     <div layout="column" layout-fill>
-        <md-toolbar ng-controller="HeaderCtrl" class="main-header">
+        <md-toolbar ng-controller="HeaderCtrl" class="md-whiteframe-z1 main-header">
             <div class="md-toolbar-tools">
                 <a ui-sref="home">
                     <img src="images/svg/logoheader.svg" height="50px" alt="IdeaWeaves"/>
                 </a>
                 <div layout="row" layout-align="start end" >
                     <a ui-sref="ideas({ tag :'all' })" class="top-bar-icon">
-                        <md-icon class="top-bar-icon-svg" md-svg-src="images/svg/ideas.svg"></md-icon>
-                        <md-tooltip>ideas</md-tooltip>
+                        <md-icon data-tooltip="ideas" class="tooltip-bottom top-bar-icon-svg" md-svg-src="images/svg/ideas.svg"></md-icon>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
                     </a>
 
                     <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
-                        <md-icon class="top-bar-icon-svg" md-svg-src="images/svg/challenges.svg"></md-icon>
-                        <md-tooltip>challenges</md-tooltip>
+                        <md-icon data-tooltip="challenges" class="tooltip-bottom top-bar-icon-svg" md-svg-src="images/svg/challenges.svg"></md-icon>
                     </a>
                     <a ui-sref="challengeSuggest" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
                     </a>
 
-                    <a ui-sref="projects.list({ tag :'all' })" class="top-bar-icon">
+                    <a ui-sref="projects.list({ tag :'all' })" class="tooltip-bottom top-bar-icon" data-tooltip="projects">
                         <i class="fa fa-rocket idea-icon"></i>
-                        <md-tooltip>projects</md-tooltip>
                     </a>
                     <a ui-sref="projectCreation" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -76,11 +73,8 @@
                         <p>&nbsp;{{ currentUser.realname || currentUser.username }}</p>
                     </div>
                 </md-button>
-                <md-button ng-cloak ui-sref="feed" ng-if="currentUser" class="md-icon-button md-primary">
+                <md-button ng-cloak ui-sref="feed" data-tooltip="notification" ng-if="currentUser" class="tooltip-bottom md-icon-button md-primary">
                     <i class="fa fa-flag">
-                        <md-tooltip>
-                            notification
-                        </md-tooltip>
                     </i>
                 </md-button>
                 <md-button ng-cloak ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
