Mail notifications working

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -216,6 +216,7 @@
     <script src="modules/idea/route.js"></script>
     <script src="modules/idea/services.js"></script>
     <script src="modules/idea/directives/ideaCard/directives.js"></script>
+    <script src="modules/idea/directives/ideaInfo/directives.js"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
