--- a/client/app/modules/common/leftNav/admin-project.tpl.html
+++ b/client/app/modules/common/leftNav/admin-project.tpl.html
@@ -1,7 +1,7 @@
 <md-toolbar layout="row">
     <div class="md-toolbar-tools">
         <div>
-            <i class="fa fa-trophy"> Settings</i>
+            <i class="fa fa-rocket"> Settings</i>
         </div>
     </div>
 </md-toolbar>
