--- a/client/app/modules/common/leftNav/tags-challenges.tpl.html
+++ b/client/app/modules/common/leftNav/tags-challenges.tpl.html
@@ -5,7 +5,7 @@
         </div>
     </div>
 </md-toolbar>
-<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="true">
     <md-content>
         <md-button style="width:100%;text-align:left;" ui-sref="challenges.list({ tag : 'all' })">ALL</md-button>
         <div ng-repeat="tag in tags">
