--- a/client/app/index.html
+++ b/client/app/index.html
@@ -42,21 +42,25 @@
                 </a>
                 <div layout="row" layout-align="start end" >
                     <a ui-sref="ideas({ tag :'all' })" class="top-bar-icon">
-                        <md-icon data-tooltip="ideas" class="tooltip-bottom top-bar-icon-svg" md-svg-src="images/svg/ideas.svg"></md-icon>
+                        <md-icon class="top-bar-icon-svg" md-svg-src="images/svg/ideas.svg">
+                        </md-icon>
+                        <div class="tooltip-topbar-icon">ideas</div>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
                     </a>
 
                     <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
-                        <md-icon data-tooltip="challenges" class="tooltip-bottom top-bar-icon-svg" md-svg-src="images/svg/challenges.svg"></md-icon>
+                        <md-icon class="top-bar-icon-svg" md-svg-src="images/svg/challenges.svg"></md-icon>
+                        <div class="tooltip-topbar-icon">challenges</div>
                     </a>
                     <a ui-sref="challengeSuggest" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
                     </a>
 
-                    <a ui-sref="projects.list({ tag :'all' })" class="tooltip-bottom top-bar-icon" data-tooltip="projects">
+                    <a ui-sref="projects.list({ tag :'all' })" class="top-bar-icon">
                         <i class="fa fa-rocket idea-icon"></i>
+                        <div class="tooltip-topbar-icon">projects</div>
                     </a>
                     <a ui-sref="projectCreation" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -73,10 +77,10 @@
                         <p>&nbsp;{{ currentUser.realname || currentUser.username }}</p>
                     </div>
                 </md-button>
-                <md-button ng-cloak ui-sref="feed" data-tooltip="notification" ng-if="currentUser" class="tooltip-bottom md-icon-button md-primary">
-                    <i class="fa fa-flag">
-                    </i>
-                </md-button>
+                <a ng-cloak ui-sref="feed" ng-if="currentUser" style="color: #036;" class="top-bar-icon">
+                    <i class="fa fa-flag fa-2x"></i>
+                    <div class="tooltip-topbar-icon">notifications</div>
+                </a>
                 <md-button ng-cloak ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
                     <i class="fa fa-sign-out">Signout</i>
                 </md-button>
