--- a/client/app/index.html
+++ b/client/app/index.html
@@ -125,7 +125,7 @@
     <script src="vendors/angular-timeago/src/timeAgo.js"></script>
     <script src="vendors/underscore/underscore.js"></script>
     <script src="vendors/angulartics/src/angulartics.js"></script>
-    <script src="vendors/angulartics/src/angulartics-ga.js"></script>
+    <script src="vendors/angulartics-google-analytics/lib/angulartics-google-analytics.js"></script>
     <script src="vendors/angular-cookies/angular-cookies.js"></script>
 
     <script src="env/config.js"></script>
@@ -227,7 +227,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-36688753-3', 'auto');
+      ga('create', 'UA-36688753-3', 'none');
     </script>
 </body>
 </html>
