box home page, view project/challenge/idea with structure

--- a/client/app/modules/profile/directives/userBlock/user-info.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-info.tpl.html
@@ -1,3 +1,3 @@
-<md-button ui-sref="profile({ uid : user._id })">
+<a style="margin-left:20px;font-size:0.7em;color:#3e50b4;" ui-sref="profile({ uid : user._id })">
     {{ user.username }}
-</md-button>
+</a>
