WIP: read-only access to workspaces

--- a/client/app/modules/common/leftNav/admin-project.tpl.html
+++ b/client/app/modules/common/leftNav/admin-project.tpl.html
@@ -1,12 +1,12 @@
 <md-toolbar layout="row">
     <div class="md-toolbar-tools">
         <div>
-            <i class="fa fa-rocket"> Settings</i>
+            <i class="fa fa-rocket"> Project Pages</i>
         </div>
     </div>
 </md-toolbar>
 
-<div ng-if="isMember" layout="column">
+<div layout="column">
     <md-button ui-sref="project.home({ pid : project.accessUrl })">
         <i class='fa fa-home'>&nbsp;Home</i>
     </md-button>
@@ -14,9 +14,9 @@
         <i class='fa fa-trello'>&nbsp;Trello</i>
     </md-button>
     <md-button ui-sref="workspace({ pid : project.accessUrl })">
-        <i class='fa fa-cogs'>&nbsp;WorkSpace</i>
+        <i class='fa fa-cogs'>&nbsp;Workspace</i>
     </md-button>
-    <md-button ui-sref="project.admin({ pid : project.accessUrl })" ng-if="isOwner">
+    <md-button ui-sref="project.admin({ pid : project.accessUrl })" ng-if="isMember || isOwner">
         <i class='fa fa-cog'>&nbsp;Admin</i>
     </md-button>
 </div>
