--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -1,42 +1,38 @@
-<div layout="column"  class="challenge-card">
-    <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="..." class="md-card-image" width="100px">
+<a ui-sref="challenge.home({ pid : challenge.accessUrl })">
+    <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
+</a>
+<md-content layout-padding style="cursor:hand;">
     <md-button ng-if="admin && isHovered" ui-sref="challengeAdmin({ cid : challenge._id })">
         <i class="fa fa-gears"></i>
         Admin
     </md-button>
-    <h4 ui-sref="challenge({ cid : challenge.accessUrl })">{{ challenge.title }}</h4>
-    <div layout="column" >
-        <div class="text-muted" layout="row" >
-            <div>
-                By :
-            </div>
-            <user-info flex ng-if="challenge" user-id="challenge.owner"></user-info>
+    <a style="text-decoration: none; color: black;" ui-sref="project.home({ pid : project.accessUrl })">
+        <h4 style="margin: 0;font-size:1.3em;">{{ project.title }}</h4>
+    </a>
+    <div font-size="font-size:0.7em;" class="text-muted" layout="row" style="margin:2px;" layout-align="start center">
+            <span style="margin:2px;font-size:0.7em;">By:</span>
+        <user-info ng-if="project.owner" user-id="project.owner" flex></user-info>
+    </div>
+    <div layout="row" style="margin-top: 5px;">
+        <div flex layout="row" class="text-muted">
+            <span style="font-size:0.7em;">
+                {{ challenge.followers.length }}
+            </span>
+            &nbsp;
+            <span style="font-size:0.7em;">
+                Followers
+            </span>
         </div>
-        <!--<p class="text-muted" ng-bind-html="challenge.brief" style="max-height:200px;overflow:hidden;" ></p>-->
-        <showtags entity="challenge"></showtags>
-        <div layout="row">
-            <div flex layout="row" class="text-muted">
-                <span>
-                    {{ challenge.followers.length }}
-                </span>
-                &nbsp;
-                <span>
-                    Followers
-                </span>
-            </div>
+        &nbsp;
+        &nbsp;
+        <div flex layout="row" class="text-muted">
+            <span style="font-size:0.7em;">
+                {{ challenge.members.length }}
+            </span>
             &nbsp;
-            &nbsp;
-            <div layout="row">
-                <div flex layout="row" class="text-muted">
-                    <span>
-                        {{ challenge.projects.length }}
-                    </span>
-                    &nbsp;
-                    <span>
-                        Projects
-                    </span>
-                </div>
-            </div>
+            <span style="font-size:0.7em;" class="text-muted">
+                Members
+            </span>
         </div>
     </div>
-</div>
+</md-content>
