--- a/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
@@ -2,13 +2,10 @@
     <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
 </a>
 <md-content layout-padding style="cursor:hand;">
-    <div style="margin:0;padding:0;">
-        <md-button class="md-raised" style="font-size:0.6em;display:inline;" ng-if="admin" ui-sref="challengeAdmin({ cid : challenge._id })">
+    <div>
+        <md-button class="md-raised" style="font-size:0.6em;display:inline;" ng-if="isAdmin()" ui-sref="challengeAdmin({ cid : challenge._id })">
             <i class="fa fa-gears"></i>
             Admin
-        </md-button>
-        <md-button class="md-raised" style="font-size:0.6em;display:inline-block;" ng-click="showProjects(challenge._id,$index)" >
-            show related projects
         </md-button>
     </div>
     <a style="text-decoration: none; color: black;" ui-sref="challenge.home({ pid : challenge.accessUrl })">
