--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -2,7 +2,7 @@
     <img ng-src="{{project.poster || '/images/placeholder100x100.png'}}" alt="Project poster" class="md-card-image" width="100%">
 </a>
 <md-content layout-padding style="cursor:hand;">
-    <md-button ng-if="admin && isHovered" ui-sref="projectAdmin({ pid : project._id })">
+    <md-button ng-if="isAdmin()" class="md-raised" ui-sref="project.admin({ pid : project.accessUrl })" style="font-size:0.6em; display:inline;">
         <i class="fa fa-gears"></i>
         Admin
     </md-button>
