Hotfix: links to challenges from card

--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -6,7 +6,7 @@
         <i class="fa fa-gears"></i>
         Admin
     </md-button>
-    <a style="text-decoration: none; color: black;" ui-sref="challenge.home({ pid : challenge.accessUrl })">
+    <a style="text-decoration: none; color: black;" ui-sref="challenge.home({ cid : challenge.accessUrl })">
         <h4 style="margin: 0;font-size:1.3em;">{{ challenge.title }}</h4>
     </a>
     <div font-size="font-size:0.7em;" class="text-muted" layout="row" style="margin:2px;" layout-align="start center">
