--- a/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
@@ -1,4 +1,4 @@
-<a ui-sref="challenge({ pid : challenge.accessUrl })">
+<a ui-sref="challenge({ cid : challenge.accessUrl })">
     <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
 </a>
 <md-content layout-padding style="cursor:hand;">
@@ -8,7 +8,7 @@
             Admin
         </md-button>
     </div>
-    <a style="text-decoration: none; color: black;" ui-sref="challenge.home({ pid : challenge.accessUrl })">
+    <a style="text-decoration: none; color: black;" ui-sref="challenge({ cid : challenge.accessUrl })">
         <h4 style="margin: 0;font-size:1.3em;">{{ challenge.title }}</h4>
     </a>
     <div font-size="font-size:0.7em;" class="text-muted" layout="row" style="margin:2px;" layout-align="start center">
