WIP: working on following tags

--- a/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
+++ b/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
@@ -11,7 +11,7 @@
         </md-button>
     </div> 
     <p class="text-muted" ng-bind="idea.brief" style="max-height:200px;overflow:hidden;" ></p>
-    <showtags entity="idea"></showtags>
+    <show-tags model="idea.tags"></show-tags>
     <div layout="row">
         <div flex layout="row" class="text-muted">
             <span>
