--- a/client/app/modules/profile/directives/userBlock/user-card.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-card.tpl.html
@@ -5,7 +5,7 @@
         {{ user.username }}
     </md-button>
     <p ng-bind-html="user.brief" style="max-height:200px;overflow:hidden;"></p>
-    <showtags entity="user"></showtags>
+    <show-tags model="user.tags"></show-tags>
     <div layout="column">
         <div flex class="text-muted">
             {{ user.followers.length }} Followers
