--- a/client/app/modules/common/leftNav/tags-projects.tpl.html
+++ b/client/app/modules/common/leftNav/tags-projects.tpl.html
@@ -8,7 +8,7 @@
 
 <md-content>
     <md-button style="display:block;text-align:left;" ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
-    <div ng-repeat="tag in tags | orderBy:'title'" ng-if="tag.number > 0">
-        <md-button style="display:block;text-align:left;" ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
+    <div ng-repeat="tag in tags | orderBy:'title'" ng-if="tag.projectCount > 0">
+        <md-button style="display:block;text-align:left;" ui-sref="projects.list({ tag : tag.title })">{{tag.title}} ({{tag.projectCount}})</md-button>
     </div>
 </md-content>
