--- a/client/app/modules/notification/notificationList/notification.tpl.html
+++ b/client/app/modules/notification/notificationList/notification.tpl.html
@@ -1,4 +1,6 @@
 <md-item layout="row">
+    <div ng-if="notification.highlight">*</div>
+
     <div class="md-tile-left">
         <span time-ago from-time="{{ notification.createDate }}"></span>
         <user-info user-id="notification.owner"></user-info>
