--- a/client/app/modules/profile/directives/userBlock/user-card.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-card.tpl.html
@@ -1,5 +1,5 @@
 <md-card style="position:relative;">
-    <img ng-src="{{user.poster || '/images/placeholder300x300.png'}}" class="md-card-image">
+    <img ng-src="{{user.poster || 'images/avater.jpg'}}" class="md-card-image">
 
     <md-button ui-sref="profile({ uid : user._id})">
         {{ user.username }}
