like and dislike in database

--- a/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
@@ -24,6 +24,22 @@
             <span style="font-size:0.7em;">
                 Followers
             </span>
+            &nbsp;&nbsp;&nbsp;
+            <span style="font-size:0.7em;">
+                {{ challenge.like }}
+            </span>
+            &nbsp;
+            <span style="font-size:0.7em;">
+                Like
+            </span>
+            &nbsp;&nbsp;&nbsp;
+            <span style="font-size:0.7em;">
+                {{ challenge.dislike }}
+            </span>
+            &nbsp;
+            <span style="font-size:0.7em;">
+                Dislike
+            </span>
         </div>
         &nbsp;
         &nbsp;
