--- a/client/app/index.html
+++ b/client/app/index.html
@@ -68,6 +68,10 @@
                     &nbsp;
                 </div>
                 <search-bar flex></search-bar>
+                <a ng-cloak ui-sref="feed" ng-if="currentUser" style="color: #036;" class="top-bar-icon">
+                    <i class="fa fa-flag fa-2x"></i>
+                    <div class="tooltip-topbar-icon">notifications</div>
+                </a>
                 <md-button ng-cloak ui-sref="signin" class="md-raised md-primary" ng-if="!currentUser">
                     <i class="fa fa-sign-in"> Sign In</i>
                 </md-button>
@@ -77,10 +81,11 @@
                         <p>&nbsp;{{ currentUser.realname || currentUser.username }}</p>
                     </div>
                 </md-button>
-                <a ng-cloak ui-sref="feed" ng-if="currentUser" style="color: #036;" class="top-bar-icon">
-                    <i class="fa fa-flag fa-2x"></i>
-                    <div class="tooltip-topbar-icon">notifications</div>
+                <a ng-cloak ui-sref="contactPage" style="color: #036;margin-left:0px;" class="top-bar-icon">
+                    <i class="fa fa-question fa-2x"></i>
+                    <div class="tooltip-topbar-icon">contact</div>
                 </a>
+
                 <md-button ng-cloak ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
                     <i class="fa fa-sign-out">Signout</i>
                 </md-button>
