add like and dislike on project card (client side)

--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -22,7 +22,24 @@
             <span style="font-size:0.7em;">
                 Followers
             </span>
+            &nbsp;&nbsp;&nbsp;
+            <span style="font-size:0.7em;">
+                {{ project.like }}
+            </span>
+            &nbsp;
+            <span style="font-size:0.7em;">
+                Like
+            </span>
+            &nbsp;&nbsp;&nbsp;
+            <span style="font-size:0.7em;">
+                {{ project.dislike }}
+            </span>
+            &nbsp;
+            <span style="font-size:0.7em;">
+                Dislike
+            </span>
         </div>
+        <br>
         &nbsp;
         &nbsp;
         <div flex layout="row" class="text-muted">
