--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -1,6 +1,12 @@
 <a ui-sref="challenge({ pid : challenge.accessUrl })">
     <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
 </a>
+<md-button class="md-fab md-mini like" onclick="likeButton()">
+    &#x25B2;
+</md-button>
+<md-button class="md-fab md-mini dislike" onclick="disLikeButton()">
+    &#x25BC;
+</md-button>
 <md-content layout-padding style="cursor:hand;">
     <md-button ng-if="admin && isHovered" ui-sref="challengeAdmin({ cid : challenge._id })">
         <i class="fa fa-gears"></i>
