--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -1,6 +1,12 @@
 <a ui-sref="project.home({ pid : project.accessUrl })">
     <img ng-src="{{project.poster || '/images/placeholder100x100.png'}}" alt="Project poster" class="md-card-image" width="100%">
 </a>
+<md-button class="md-fab md-mini like" onclick="likeButton()">
+    &#x25B2;
+</md-button>
+<md-button class="md-fab md-mini dislike" onclick="disLikeButton()">
+    &#x25BC;
+</md-button>
 <md-content layout-padding style="cursor:hand;">
     <md-button ng-if="isAdmin()" class="md-raised" ui-sref="project.admin({ pid : project.accessUrl })" style="font-size:0.6em; display:inline;">
         <i class="fa fa-gears"></i>
