Improved notification highlight

--- a/client/app/modules/notification/notificationList/notification.tpl.html
+++ b/client/app/modules/notification/notificationList/notification.tpl.html
@@ -1,6 +1,6 @@
 <md-item layout="row" >
-    <div ng-if="notification.highlight">
-        <i class="fa fa-flag-o baseColor"></i>
+    <div ng-if="notification.highlight" layout-margin>
+        <i class="fa fa-flag-o baseColor fa-icon-size"></i>
     </div>
 
     <div class="md-tile-left">
